--- a/1d.ipynb
+++ b/1d.ipynb
@@ -294,7 +294,11 @@
    ],
    "source": [
     "# 1d\n",
-    "## Categorical or binning continuous variables\n",
+    "# One of the quickest and most effective ways to visualize all numeric data and their distributions, \n",
+    "# is to leverage histograms \n",
+    "# to visualize a discrete, categorical data attribute we can use bar plots. The advantage of using it over pie chart\n",
+    "# is that it shows the count more clearly than the pie chart. The disadvantage of using it is if the number of categories\n",
+    "# is too many, then user needs to scan the whole thing which takes time. \n",
     "fig = plt.figure(figsize = (6, 4))\n",
     "title = fig.suptitle(\"Day of the week distribution\", fontsize=14)\n",
     "fig.subplots_adjust(top=0.85, wspace=0.3)\n",
@@ -324,32 +328,12 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "# 5d\n",
-    "## convert to categorical vars \n",
-    "atus['case_id'] = atus['case_id'].astype('category')\n",
-    "atus['employed'] = atus['employed'].astype('category')\n",
-    "atus['gender'] = atus['gender'].astype('category')\n",
-    "atus['spouse_empl'] = atus['spouse_empl'].astype('category')\n",
-    "atus['day'] = atus['day'].astype('category')\n",
-    "atus['year'] = atus['year'].astype('category')\n",
-    "atus['full_part_wrk'] = atus['full_part_wrk'].astype('category')\n",
-    "atus.dtypes\n",
-    "\n",
-    "g = sns.FacetGrid(atus, row='gender', col=\"employed\", hue='spouse_empl')\n",
-    "g.map(plt.scatter,  \"age\", 'full_part_wrk', alpha=0.5, \n",
-    "      edgecolor='k', linewidth=0.5)\n",
-    "fig = g.fig \n",
-    "fig.set_size_inches(18, 8)\n",
-    "fig.subplots_adjust(top=0.85, wspace=0.3)\n",
-    "fig.suptitle('gender - employed - spouse_empl - age - weekly_earn - weekly_work_hrs', fontsize=14)\n",
-    "l = g.add_legend(title='Atus demography')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -363,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
